--- a/style.css
+++ b/style.css
@@ -199,6 +199,6 @@ section {
     color: #f5f5f5;
     margin: 15% auto;
     /* padding: 20px; */
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: fit-content;
 }
