--- a/style.css
+++ b/style.css
@@ -198,6 +198,8 @@ section {
     
     color: #f5f5f5;
     margin: 15% auto;
+    
+    background-color: black;
     /* padding: 20px; */
     /* border: 1px solid red; */
     width: fit-content;
