--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ section {
 }
 
 .cardsContainer {
-    
+    column-gap: 40px;
+    row-gap: 40px;
     padding: 0px 100px; 
     
     display: flex;
@@ -115,6 +116,7 @@ section {
     /* padding: 10px; */
     margin-bottom: 20px;
     width: 300px;
+    
     /* Ajuste conforme necessário */
     height: 400px;
     z-index: 0;
@@ -133,7 +135,7 @@ section {
     margin-top: 300px;
     padding-left: 30px;
     text-shadow: 2px 2px #1E2328;
-    
+    background-color: #1e2328af;
     
     
 }
@@ -171,7 +173,8 @@ section {
     padding-left: 30px;
     padding: 8px;
     text-transform: capitalize;
-    backdrop-filter: blur(8px);
+    background-color: #1e2328af;
+    /* backdrop-filter: blur(8px); */
     
     font-size: 12px;
     font-style: italic;
